[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Dum/DumPlayerEmptySmall.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/fonts/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Scripts/ScenerySpawner.gd" type="Script" id=5]
[ext_resource path="res://Scripts/OptionsMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/audio/kenney interface sounds/bong_001.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scripts/CreditsMenu.gd" type="Script" id=8]
[ext_resource path="res://Assets/fonts/JetBrainsMono-2.304/fonts/ttf/JetBrainsMono-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/StatsMenu.gd" type="Script" id=10]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.784314, 0.784314, 0.784314, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
fog_enabled = true
fog_color = Color( 0.784314, 0.784314, 0.784314, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_depth_begin = 25.0
fog_depth_end = 50.0

[sub_resource type="DynamicFont" id=14]
size = 26
use_mipmaps = true
extra_spacing_bottom = -5
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=26]
default_font = SubResource( 14 )

[sub_resource type="DynamicFont" id=20]
size = 160
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=19]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxLine" id=27]
thickness = 10

[sub_resource type="DynamicFont" id=30]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=29]

[node name="MainMenuScene" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 15 )
fov = 45.0

[node name="ScenerySpawner" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="ScenerySpawner"]
wait_time = 5.0
autostart = true

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
anchor_bottom = 1.0
margin_right = 152.0
margin_bottom = -10.0
alignment = 2

[node name="VersionLabel" type="Label" parent="Credits/VBoxContainer"]
margin_top = 1006.0
margin_right = 304.0
margin_bottom = 1036.0
theme = SubResource( 26 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "v1.0 Demo"
valign = 2

[node name="CreditsLabel" type="Label" parent="Credits/VBoxContainer"]
margin_top = 1040.0
margin_right = 304.0
margin_bottom = 1070.0
theme = SubResource( 26 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Made by Chris Kurcz"
valign = 2

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
optionsMenu = NodePath("../OptionsMenu")
statsMenu = NodePath("../StatsMenu")
creditsMenu = NodePath("../CreditsMenu")
buttonAudio = NodePath("../ButtonAudioStreamPlayer3D")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
margin_right = 1840.0
margin_bottom = 1000.0

[node name="Title" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Blik.exe"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 1840.0
margin_bottom = 762.0

[node name="StartButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 106.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Launch"
align = 0

[node name="OptionsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1840.0
margin_bottom = 216.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Options"
align = 0

[node name="StatsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1840.0
margin_bottom = 326.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Stats"
align = 0

[node name="CreditsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 1840.0
margin_bottom = 436.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Credits"
align = 0

[node name="ExitButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 1840.0
margin_bottom = 546.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Exit"
align = 0

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
mainMenu = NodePath("../MainMenu")
cursorButton = NodePath("MarginContainer/VBoxContainer/VBoxContainer/CursorButton")
textSpeedButton = NodePath("MarginContainer/VBoxContainer/VBoxContainer/TextSpeedButton")
volumeSlider = NodePath("MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VolumeSlider")

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/MarginContainer"]
margin_right = 1840.0
margin_bottom = 1000.0

[node name="Title" type="Label" parent="OptionsMenu/MarginContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 1840.0
margin_bottom = 652.0

[node name="CursorButton" type="Button" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 106.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Cursor Size: Small"
align = 0

[node name="TextSpeedButton" type="Button" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 1840.0
margin_bottom = 216.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Cursor Size: Small"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 1840.0
margin_bottom = 326.0

[node name="Label" type="Label" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 672.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Sound Volume: "

[node name="VolumeSlider" type="HSlider" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 676.0
margin_right = 1840.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 27 )
max_value = 2.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 1840.0
margin_bottom = 436.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Back"
align = 0

[node name="StatsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
mainMenu = NodePath("../MainMenu")
timeLabel = NodePath("MarginContainer/VBoxContainer/Label1")
maxHeightLabel = NodePath("MarginContainer/VBoxContainer/Label2")
jumpsLabel = NodePath("MarginContainer/VBoxContainer/Label3")
crashesLabel = NodePath("MarginContainer/VBoxContainer/Label4")
jumpPadsLabel = NodePath("MarginContainer/VBoxContainer/Label5")
multipliersLabel = NodePath("MarginContainer/VBoxContainer/Label6")
droidsLabel = NodePath("MarginContainer/VBoxContainer/Label7")

[node name="MarginContainer" type="MarginContainer" parent="StatsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMenu/MarginContainer"]
margin_right = 1840.0
margin_bottom = 1000.0

[node name="Title" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "Stats"

[node name="Label1" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 1840.0
margin_bottom = 269.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "in game time  = 00:00:00"

[node name="HSeparator" type="HSeparator" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 273.0
margin_right = 1840.0
margin_bottom = 313.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="Label2" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 1840.0
margin_bottom = 370.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "record height = 0"

[node name="HSeparator2" type="HSeparator" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 1840.0
margin_bottom = 414.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="Label3" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 1840.0
margin_bottom = 471.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "# of signals sent = 0"

[node name="Label4" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 475.0
margin_right = 1840.0
margin_bottom = 528.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "# of crashes = 0"

[node name="Label5" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 532.0
margin_right = 1840.0
margin_bottom = 585.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "# of jump pads = 0"

[node name="Label6" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 589.0
margin_right = 1840.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "# of speed boosts = 0"

[node name="Label7" type="Label" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 646.0
margin_right = 1840.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "# of spoko bots = 0"

[node name="HSeparator3" type="HSeparator" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 703.0
margin_right = 1840.0
margin_bottom = 743.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="ResetButton" type="Button" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 747.0
margin_right = 1840.0
margin_bottom = 853.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Reset Progress"
align = 0

[node name="BackButton" type="Button" parent="StatsMenu/MarginContainer/VBoxContainer"]
margin_top = 857.0
margin_right = 1840.0
margin_bottom = 963.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Back"
align = 0

[node name="CreditsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
mainMenu = NodePath("../MainMenu")

[node name="MarginContainer" type="MarginContainer" parent="CreditsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/MarginContainer"]
margin_right = 1840.0
margin_bottom = 1000.0

[node name="Label1" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_right = 1840.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "Made by"

[node name="Label2" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 1840.0
margin_bottom = 163.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Chris Kurcz"

[node name="HSeparator" type="HSeparator" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 1840.0
margin_bottom = 207.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="Label3" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 1840.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "Made in"

[node name="Label4" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 1840.0
margin_bottom = 374.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Godot Game Engine"

[node name="HSeparator2" type="HSeparator" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 1840.0
margin_bottom = 418.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="Label5" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 1840.0
margin_bottom = 475.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "Sound effects provided by"

[node name="Label6" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 479.0
margin_right = 1840.0
margin_bottom = 585.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Kenney.nl"

[node name="HSeparator3" type="HSeparator" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 589.0
margin_right = 1840.0
margin_bottom = 629.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="Label7" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 633.0
margin_right = 1840.0
margin_bottom = 686.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
text = "Special thanks to"

[node name="Label8" type="Label" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 690.0
margin_right = 1840.0
margin_bottom = 796.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Friends and Family"

[node name="HSeparator4" type="HSeparator" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 800.0
margin_right = 1840.0
margin_bottom = 840.0
custom_constants/separation = 40
custom_styles/separator = SubResource( 29 )

[node name="BackButton" type="Button" parent="CreditsMenu/MarginContainer/VBoxContainer"]
margin_top = 844.0
margin_right = 1840.0
margin_bottom = 950.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.25098, 0.25098, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 21 )
text = "Back"
align = 0

[node name="ButtonAudioStreamPlayer3D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[connection signal="timeout" from="ScenerySpawner/Timer" to="ScenerySpawner" method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StartButton" to="MainMenu" method="_on_StartButton_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/OptionsButton" to="MainMenu" method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StatsButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/StatsButton" to="MainMenu" method="_on_StatsButton_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/CreditsButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/CreditsButton" to="MainMenu" method="_on_CreditsButton_pressed"]
[connection signal="mouse_entered" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/VBoxContainer/ExitButton" to="MainMenu" method="_on_ExitButton_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/CursorButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/CursorButton" to="OptionsMenu" method="_on_CursorButton_pressed"]
[connection signal="mouse_entered" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/TextSpeedButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/TextSpeedButton" to="OptionsMenu" method="_on_TextSpeedButton_pressed"]
[connection signal="mouse_exited" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VolumeSlider" method="release_focus"]
[connection signal="value_changed" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="OptionsMenu" method="_on_VolumeSlider_value_changed"]
[connection signal="mouse_entered" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/BackButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="OptionsMenu/MarginContainer/VBoxContainer/VBoxContainer/BackButton" to="OptionsMenu" method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="StatsMenu/MarginContainer/VBoxContainer/ResetButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="StatsMenu/MarginContainer/VBoxContainer/ResetButton" to="StatsMenu" method="_on_ResetButton_pressed"]
[connection signal="mouse_entered" from="StatsMenu/MarginContainer/VBoxContainer/BackButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="StatsMenu/MarginContainer/VBoxContainer/BackButton" to="StatsMenu" method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="CreditsMenu/MarginContainer/VBoxContainer/BackButton" to="MainMenu" method="_on_button_hover"]
[connection signal="pressed" from="CreditsMenu/MarginContainer/VBoxContainer/BackButton" to="CreditsMenu" method="_on_BackButton_pressed"]
